left part in other component. Right part started (starting cards)

--- a/src/app/Components/weather-left-infos-container/weather-left-infos-container.component.html
+++ b/src/app/Components/weather-left-infos-container/weather-left-infos-container.component.html
@@ -1,1 +1,15 @@
-<p>weather-left-infos-container works!</p>
+<div class="input-container">
+    <mat-form-field class="search-form-field">
+    <mat-label>Search for places ...</mat-label>
+    <input matInput type="text">
+    </mat-form-field>
+</div>
+<img src="../assets/sun-with-clouds.png" alt="image" class="weather-type-image-left-container" />
+<div class="weather-day-info">
+    <h2>12°C</h2>
+    <p>Monday, 16:00</p>
+</div>
+<div class="weather-left-aditional-info">
+    <a>Mostly cloudy</a>
+    <a>Rain - 30%</a>
+</div>
