--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,7 +9,7 @@
 
 .weather-container {
     height: 80%;
-    width: 60%;
+    width: 80%;
     background-color: #FFFFFF;
     border-radius: 50px;
     display: flex;
@@ -22,6 +22,7 @@
     flex-direction: column;
     padding-left: 50px;
     padding-top: 30px;
+    padding-right: 20px;
 }
 
 .weather-right-container {
@@ -30,11 +31,6 @@
     background-color: #F6F6F7;
     border-top-right-radius: 50px;
     border-bottom-right-radius: 50px;
-}
-
-.weather-left-container input {
-    height: 40px;
-    width: 80%;
 }
 
 .weather-left-container input::placeholder {
@@ -46,10 +42,6 @@
 .input-container {
     display: flex;
     align-items: center;
-}
-
-.search-form-field {
-    height: 60px;
 }
 
 .weather-type-image-left-container {
@@ -69,6 +61,7 @@
     flex-direction: column;
     border-bottom: 1px solid #F6F6F7;
     width: 90%;
+    margin-bottom: 20px;
 }
 
 .weather-day-info h2 {
@@ -79,4 +72,11 @@
 
 .weather-day-info p {
     font-size: 18px;
+    margin-top: 30px;
+}
+
+.weather-left-container a {
+    margin-top: 10px;
+    font-size: 15px;
+    font-weight: 600px;
 }
