--- a/src/app/weather-card-info/weather-card-info.component.html
+++ b/src/app/weather-card-info/weather-card-info.component.html
@@ -1,1 +1,8 @@
-<p>weather-card-info works!</p>
+<mat-card class="example-card">
+  <mat-card-header>
+
+    <mat-card-title>UV Index</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+  </mat-card-content>
+</mat-card>
